# followcheck

./: .pypirc  LICENSE  README.md  pyproject.toml
doc/: HowToGetData.md
src/test_package_sinebell/: followcheck.py
